@@ -23,6 +23,7 @@ $max_dict_key = array
 	'0.17.3' => 1150,
 	'0.17.4' => 1150,
 	'0.17.5' => 1322,
+	'0.17.6' => 1326,
 );
 
 define ('TAGNAME_REGEXP', '^[[:alnum:]]([\. _~-]?[[:alnum:]])*$');
